Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanText.quorum
class Main
    action Main
        boolean v = Test()
    end

    action Test() returns boolean
        text var = "text"
        return var
    end
end